added warning about data remove in delete-data option

--- a/src/index.html
+++ b/src/index.html
@@ -379,6 +379,13 @@
                     </table>
                 </div>
                 <div class="clearall_option setting_option" id="clearall">
+                    <h4 class="project_title">Delete all?</h4>
+                    <div class="divider"></div>
+                    <div class="approve_btns">
+                    <a id="clear" class="btn approve_btn waves-effect waves-light">Confirm</a>
+                    <a id="cancel_clear" class="btn approve_btn waves-effect waves-light">Cancel</a>
+                    </div>
+                    <p class="clear_warning">Remember! All app data will be removed unrestorely!</p>
                 </div>
                 <div class="next_step_option setting_option" id="next_step">
                     <!-- <button class="waves-effect waves-light btn" id="export">Save data and go next</button> -->
@@ -397,7 +404,7 @@
             <a class="btn tooltipped slide_btn displacement" data-position="right" data-delay="50" data-tooltip="Map displacement" data-execute="displacement"></a>
             <a class="btn tooltipped slide_btn pen" data-position="right" data-delay="50" data-tooltip="Draw route and points" data-execute="pen"></a>
             <a class="btn tooltipped slide_btn colorize_map" data-position="right" data-delay="50" data-tooltip="Color map" data-execute="colorize"></a>
-            <a class="btn tooltipped slide_btn clear" id="clear" data-position="right" data-delay="50" data-tooltip="Clear editor" data-execute="clearall"></a>
+            <a class="btn tooltipped slide_btn clear" data-position="right" data-delay="50" data-tooltip="Clear editor" data-execute="clearall"></a>
             <a class="btn tooltipped slide_btn redraw" data-position="right" id="redraw" data-delay="50" data-tooltip="Redraw editor" data-execute="redraw"></a>
             <a class="btn tooltipped slide_btn next_step" data-position="right" data-delay="50" data-tooltip="Next step" id="export" data-execute="next_step"></a>
             <a class="btn tooltipped slide_btn info" data-position="right" data-delay="50" data-tooltip="Info" data-execute="info"></a>
